--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+# 2.0.8
+- refactor: use nonce() from bfx-api-node-util
+
 # 2.0.7
 - refactor: OCOCO now keeps 'ocoAction' and 'action' params
 - feature: add reconnect() method to AO Host
