--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+# 2.0.12
+- fix: refactor tests so they can run alongside all other HF/API library tests
+
 # 2.0.11
 - meta: bump bitfinex-api-node to v4
 
